# SCIMS-Remaster

./: CMakeLists.txt  README.md  SCIMSDAO.cpp  SCIMSDAO.h  VerticalTabBar.cpp  VerticalTabBar.h  VerticalTabWidget.cpp  VerticalTabWidget.h  login.cpp  login.h  login.ui  loginDAO.cpp  loginDAO.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sqltablemodel.cpp  sqltablemodel.h
